--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "estacionamento-frontend": "file:",
     "lucide-react": "^0.453.0",
     "next-themes": "^0.3.0",
